Changelog
=========

1.3 (unreleased)
----------------

- Ensure latest Plone versions display the CAS icon in the control panel.
  [davidjb]
- Fix AttributeError when looking up `context.request` if a CAS URL isn't
  configured and users are logged out.
  [davidjb]
- Use navigation root rather than portal for the log out URL.
  [davidjb]
- Fix creation of CAS4PAS plugin when one doesn't exist on CAS control panel
  load.
  [davidjb]

- Rename the title of the GS-profile to the id of the package, which avoids
  confusion when similarly named packages exist. [WouterVH]

- Add CAS-icon to the control-panel. [WouterVH]

- Add docs/INSTALL.txt  [WouterVH]

- Add CHANGES.txt [WouterVH]

- Add MANIFEST.in [WouterVH]

- Standardize package-docs according to current conventions. [WouterVH]


1.2 (2010-08-09)
-----------------

- Refactor login/logout methods. [kiorky]

- SECURITY FIX: ensure we are well logged out from CAS and plone on logout from
  plone. [kiorky]

- Merge of the properlogout branch made by kiorky [encolpe]


1.1 (2010-05-03)
----------------

- First release since Derek disparition [encolpe]


1.0 (2008-05-02)
----------------
- Initial release [derek_richardson]
